# urllib3

./: ANALYSIS.md  CVE-2024-37891.patch  CVE-2025-50181-source-only.diff  CVE-2025-66471_and_66418.diff  README.md  apply_cve_66471_66418_py38.py  apply_cve_66471_66418_py38_part2.py  apply_cve_66471_66418_py38_part3.py  apply_cve_66471_66418_py38_part3_fixed.py  fix_decode_method.py  patch_retry.py  pyproject.toml  sync_ecosystem_final.sh
.github/workflows/: publish.yml
src/urllib3_lts/: __init__.py
