[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urllib3-lts"
version = "2026.21441.0"
description = "LTS Security release for urllib3 (CVE-2026-21441 Patch) - Meta-package"
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "1minds3t", email = "1minds3t@proton.me"}]
classifiers = [
    "Topic :: Security",
    "Intended Audience :: Developers"
]

dependencies = [
    # PY3.7: Depends on latest EXISTING version, allows update to 2026+
    "urllib3-lts-py37>=2025.66471.3 ; python_version >= '3.7' and python_version < '3.8'",
    
    # PY3.8: Depends on latest EXISTING version, allows update to 2026+
    "urllib3-lts-py38>=2025.66471.2 ; python_version >= '3.8' and python_version < '3.9'",
    
    # PY3.9+: Upstream fix
    "urllib3>=2.6.3 ; python_version >= '3.9'" 
]

[project.urls]
Homepage = "https://github.com/1minds3t/urllib3-lts"
"Security" = "https://github.com/1minds3t/urllib3-lts/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["src"]
